[Feature][Login] Add SSO login by Casdoor

--- a/dolphinscheduler-api/src/main/resources/i18n/messages_en_US.properties
+++ b/dolphinscheduler-api/src/main/resources/i18n/messages_en_US.properties
@@ -208,6 +208,7 @@ UPDATE_PROCESS_INSTANCE_NOTES=update process instance
 QUERY_PROCESS_INSTANCE_LIST_NOTES=query process instance list
 VERIFY_PROCESS_DEFINITION_NAME_NOTES=verify process definition name
 LOGIN_NOTES=user login
+SSO_LOGIN_NOTES=user sso login
 UPDATE_PROCESS_DEFINITION_NOTES=update process definition
 PROCESS_DEFINITION_ID=process definition id
 PROCESS_DEFINITION_IDS=process definition ids
