--- a/dolphinscheduler-api/src/main/resources/i18n/messages_zh_CN.properties
+++ b/dolphinscheduler-api/src/main/resources/i18n/messages_zh_CN.properties
@@ -197,6 +197,7 @@ UPDATE_PROCESS_INSTANCE_NOTES=更新流程实例
 QUERY_PROCESS_INSTANCE_LIST_NOTES=查询流程实例列表
 VERIFY_PROCESS_DEFINITION_NAME_NOTES=验证流程定义名字
 LOGIN_NOTES=用户登录
+SSO_LOGIN_TAG=单点登录
 UPDATE_PROCESS_DEFINITION_NOTES=更新流程定义
 PROCESS_DEFINITION_ID=流程定义ID
 RELEASE_PROCESS_DEFINITION_NOTES=发布流程定义
