add a few codes about dao

--- a/dolphinscheduler-api/src/main/resources/i18n/messages.properties
+++ b/dolphinscheduler-api/src/main/resources/i18n/messages.properties
@@ -448,3 +448,8 @@ PROJECT_PARAMETER_CODE=project parameter code
 DELETE_PROJECT_PARAMETER_NOTES=delete project parameter
 QUERY_PROJECT_PARAMETER_LIST_PAGING_NOTES=query project parameter list paging
 QUERY_PROJECT_PARAMETER_NOTES=query project parameter
+
+PROJECT_PREFERENCE_TAG=project preference related operation
+UPDATE_PROJECT_PREFERENCE_NOTES=update project preference
+PROJECT_PREFERENCES=project preferences
+QUERY_PROJECT_PREFERENCE_NOTES=query project preference
