[improvement][api] Fix typo for controllers

--- a/dolphinscheduler-api/src/main/resources/i18n/messages.properties
+++ b/dolphinscheduler-api/src/main/resources/i18n/messages.properties
@@ -193,7 +193,7 @@ PROCESS_DEFINITION_DESC=process definition desc
 PROCESS_DEFINITION_TAG=process definition related opertation
 PROCESS_DEFINITION_CODE=process definition code
 PROCESS_DEFINITION_CODE_LIST=process definition code list
-SIGNOUT_NOTES=logout
+SIGN_OUT_NOTES=logout
 USER_PASSWORD=user password
 UPDATE_PROCESS_INSTANCE_NOTES=update process instance
 QUERY_PROCESS_INSTANCE_LIST_NOTES=query process instance list
