--- a/dolphinscheduler-api/src/main/resources/i18n/messages_en_US.properties
+++ b/dolphinscheduler-api/src/main/resources/i18n/messages_en_US.properties
@@ -202,7 +202,7 @@ PROCESS_DEFINITION_CONNECTS=process definition node connects info (json format)
 PROCESS_INSTANCE_CONNECTS=process instance node connects info (json format)
 PROCESS_DEFINITION_DESC=process definition desc
 PROCESS_DEFINITION_TAG=process definition related operation
-SIGNOUT_NOTES=logout
+SIGN_OUT_NOTES=logout
 USER_PASSWORD=user password
 UPDATE_PROCESS_INSTANCE_NOTES=update process instance
 QUERY_PROCESS_INSTANCE_LIST_NOTES=query process instance list
