--- a/dolphinscheduler-api/src/main/resources/i18n/messages_zh_CN.properties
+++ b/dolphinscheduler-api/src/main/resources/i18n/messages_zh_CN.properties
@@ -191,7 +191,7 @@ PROCESS_DEFINITION_CONNECTS=流程定义节点图标连接信息(json格式)
 PROCESS_INSTANCE_CONNECTS=流程实例节点图标连接信息(json格式)
 PROCESS_DEFINITION_DESC=流程定义描述信息
 PROCESS_DEFINITION_TAG=流程定义相关操作
-SIGNOUT_NOTES=退出登录
+SIGN_OUT_NOTES=退出登录
 USER_PASSWORD=用户密码
 UPDATE_PROCESS_INSTANCE_NOTES=更新流程实例
 QUERY_PROCESS_INSTANCE_LIST_NOTES=查询流程实例列表
